pzh export : added "filename" property to DataExchangeExportModel
