# backend/src/main/java/nl/vng/diwi/models/DataExchangeExportModel.java
@@ -19,6 +19,7 @@ public class DataExchangeExportModel {
     private List<UUID> projectIds;
     private List<Confidentiality> confidentialityLevels;
     private String token;
+    private String filename;
 
     public String validate(DataExchangeType type) {
         if (exportDate == null) {
